name:                i3blocks-hs-contrib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/panavtec/i3blocks-hs-contrib#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Panadero
maintainer:          panavtec@gmail.com
copyright:           Apache2
category:            i3blocks
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable AirplaneMode
  hs-source-dirs:      app
  main-is:             AirplaneMode.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
  default-language:    Haskell2010

executable Battery
  hs-source-dirs:      app
  main-is:             Battery.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
  default-language:    Haskell2010

executable Bitcoin
  hs-source-dirs:      app
  main-is:             Bitcoin.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , text
                     , attoparsec
                     , wreq
                     , lens
                     , lens-aeson
  default-language:    Haskell2010

executable Cpu
  hs-source-dirs:      app
  main-is:             Cpu.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
  default-language:    Haskell2010

executable DateTime
  hs-source-dirs:      app
  main-is:             DateTime.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , time
  default-language:    Haskell2010

executable Docker
  hs-source-dirs:      app
  main-is:             Docker.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
  default-language:    Haskell2010

executable Memory
  hs-source-dirs:      app
  main-is:             Memory.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
  default-language:    Haskell2010

executable OpenVpn
  hs-source-dirs:      app
  main-is:             OpenVpn.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
  default-language:    Haskell2010

executable Volume
  hs-source-dirs:      app
  main-is:             Volume.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
  default-language:    Haskell2010

executable Wifi
  hs-source-dirs:      app
  main-is:             Wifi.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
  default-language:    Haskell2010

executable Bandwidth
  hs-source-dirs:      app
  main-is:             Bandwidth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
test-suite i3blocks-hs-contrib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , i3blocks-hs-contrib
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/panavtec/i3blocks-hs-contrib
